welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:15: error: not found: value getPos
		getPos(x,y)!=setPos(getMondeHauteur()-1,getMondeHauteur()-1)
                ^